testcases/pos/labeled/no_blocking_on_lambda.bard
let val x = 42 raisedTo {secret}
in
    (n: Int) => n + 1
end
