testcases/neg/labeled/send_secret.bard
let val x = 42 raisedTo {secret}
in
    send x
end
